@@ -2,10 +2,10 @@
     mod_id: '1'
     mod_name: 'My Module'
     mod_dirname: mymodule
-    mod_version: '1.0'
-    mod_since: '1.0'
+    mod_version: '1.0.0'
+    mod_since: '1.0.0'
     mod_min_php: '7.3'
-    mod_min_xoops: 2.5.11
+    mod_min_xoops: '2.5.11 Beta1'
     mod_min_admin: '1.2'
     mod_min_mysql: '5.6'
     mod_description: 'This module is for doing following...'
